# AmazonTemplate3

./: .gitignore  CMakeLists.txt  README.md  READMEAI.md  common.cmake  readmeai.txt
AmazonTemplate3/: CMakeLists.txt  CMakePresets.json  main.cpp
AmazonTemplate3/gui/: DialogAddPossibleValues.cpp  DialogAddPossibleValues.h  DialogAddPossibleValues.ui  DialogAddValueToReplace.cpp  DialogAddValueToReplace.h  DialogAddValueToReplace.ui  DialogAttributes.cpp  DialogAttributes.h  DialogAttributes.ui  DialogExtractInfos.cpp  DialogExtractInfos.h  DialogExtractInfos.ui  DialogValidateMandatory.cpp  DialogValidateMandatory.h  DialogValidateMandatory.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  gui.cmake
AmazonTemplate3Lib/: AiFailureTable.cpp  AiFailureTable.h  AmazonTemplate3Lib.cpp  AmazonTemplate3Lib.h  Attribute.cpp  Attribute.h  AttributeEquivalentTable.cpp  AttributeEquivalentTable.h  AttributeFlagsTable.cpp  AttributeFlagsTable.h  AttributePossibleMissingTable.cpp  AttributePossibleMissingTable.h  AttributeValueReplacedTable.cpp  AttributeValueReplacedTable.h  AttributesMandatoryAiTable.cpp  AttributesMandatoryAiTable.h  AttributesMandatoryTable.cpp  AttributesMandatoryTable.h  CMakeLists.txt  ExceptionTemplate.cpp  ExceptionTemplate.h  FileModelSources.cpp  FileModelSources.h  FileModelToFill.cpp  FileModelToFill.h  MandatoryAttributesManager.cpp  MandatoryAttributesManager.h  TableInfoExtractor.cpp  TableInfoExtractor.h  TemplateExceptions.cpp  TemplateExceptions.h  TemplateFiller.cpp  TemplateFiller.h
AmazonTemplate3Lib/fillers/: AbstractFiller.cpp  AbstractFiller.h  FillerBulletPoints.cpp  FillerBulletPoints.h  FillerCopy.cpp  FillerCopy.h  FillerKeywords.cpp  FillerKeywords.h  FillerPrice.cpp  FillerPrice.h  FillerSelectable.cpp  FillerSelectable.h  FillerSize.cpp  FillerSize.h  FillerText.cpp  FillerText.h  FillerTitle.cpp  FillerTitle.h  fillers.cmake
AmazonTemplate3Tests/: CMakeLists.txt  tst_attributeequivalenttable.cpp  tst_attributeflagstable.cpp  tst_attributesmandatorytable.cpp  tst_attributevaluereplacedtable.cpp  tst_fillersize.cpp  tst_mandatoryattributesmanager.cpp  tst_templatefiller.cpp  tst_testopenai2.cpp
